# spline

./: CMakeLists.txt  README.md
examples/: Makefile  bench.cpp  demo.cpp  interpol.cpp  interpol_alglib.cpp  plot.sh  plot.txt  stoptime.h
src/: spline.h
